--- a/src/app/edit-list/edit-list.component.html
+++ b/src/app/edit-list/edit-list.component.html
@@ -3,16 +3,13 @@
 <button (click)="redirect('/edit/new')">Add new Task</button>
 
 <div class="tasksArea">
-  <div
-    class="task-container"
-    *ngFor="let task of tasks"
-    (click)="redirect('/edit/' + task.id)"
-  >
-    <div class="task">
+  <div class="task-container" *ngFor="let task of tasks">
+    <div class="task" (click)="redirect('/edit/' + task.id)">
       <div class="task-title-text" [innerHTML]="task.title"></div>
       <div class="task-last-post">
         Next due: {{ task.nextDueDate | date : "dd.MM.yyyy" }}
       </div>
     </div>
+    <button class="task-delete-btn" (click)="deleteTask(task)">Delete</button>
   </div>
 </div>
