--- a/src/app/components/task-panel/task-panel.component.scss
+++ b/src/app/components/task-panel/task-panel.component.scss
@@ -44,6 +44,10 @@
   padding-right: 5px;
 }
 
+.task-description-empty {
+  font-style: italic;
+}
+
 .task-title-text:hover {
   background-color: yellow;
   cursor: pointer;
