feat: :sparkles: add categories: Save entity, List, Editor, Task linkage and Field inside editor

--- a/src/app/edit-list/edit-list.component.html
+++ b/src/app/edit-list/edit-list.component.html
@@ -1,6 +1,8 @@
-<p>edit-list works!</p>
+<h2>Edit Tasks</h2>
 
 <button (click)="redirect('/edit/new')">Add new Task</button>
+
+<button (click)="redirect('/categories/')">Edit Categories</button>
 
 <div class="tasksArea">
   <div class="task-container" *ngFor="let task of tasks">
