feat: :sparkles: editor: go back to where it was called from

--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -11,7 +11,7 @@
         >No Description.</span
       >
       <div>
-        <button (click)="router.navigate(['/edit/' + task.id])">edit</button>
+        <button (click)="redirectToEdit(task.id)">edit</button>
         <button (click)="deletePrompt()">delete</button>
       </div>
     </div>
