--- a/src/app/components/xp-progress-bar/xp-progress-bar.component.scss
+++ b/src/app/components/xp-progress-bar/xp-progress-bar.component.scss
@@ -2,9 +2,12 @@
   width: 100%;
   height: 25px;
   background-color: #222;
+  position: absolute;
+  bottom: 8px;
 }
 
 .progress-bar-fill {
   background-color: #5f5;
   height: 100%; /* This is important */
+  transition: all 0.35s ease-in-out;
 }
