feat: :sparkles: add category priority and filtering, also add color

--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -1,4 +1,11 @@
-<div *ngIf="task" class="task-panel">
+<div
+  *ngIf="task"
+  class="task-panel"
+  [ngStyle]="{
+    background:
+      '-webkit-linear-gradient(' + getCategoryColor(task) + ', #ffffff)'
+  }"
+>
   <div class="task-content">
     <div
       class="task-title-text"
