--- a/src/app/edit-list/categories/category-editor/category-editor.component.html
+++ b/src/app/edit-list/categories/category-editor/category-editor.component.html
@@ -9,6 +9,6 @@
 <input [(ngModel)]="category.name" />
 
 <h4>Color</h4>
-<input [(ngModel)]="category.color" />
+<input type="color" [(ngModel)]="category.color" />
 
 <button (click)="onSavePressed()">Save</button>
