--- a/src/app/components/task-panel/task-panel.component.scss
+++ b/src/app/components/task-panel/task-panel.component.scss
@@ -48,6 +48,10 @@
   font-style: italic;
 }
 
+.task-title-text {
+  font-style: bold;
+}
+
 .task-title-text:hover {
   background-color: yellow;
   cursor: pointer;
