chore: :pencil2: show XP in task timeline

--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -20,6 +20,7 @@
       <div>
         <button (click)="redirectToEdit(task.id)">edit</button>
         <button (click)="deletePrompt()">delete</button>
+        <span>XP: +{{ task.xp }} </span>
       </div>
     </div>
   </div>
