--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -1,1 +1,3 @@
-Level: {{ levelProgress.level }} XP: {{ levelProgress.xp }} / {{ neededXP }}
+<div>
+  Level: {{ levelProgress.level }} XP: {{ levelProgress.xp }} / {{ neededXP }}
+</div>
