feat: :sparkles: show days till due

--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -21,6 +21,7 @@
         <button (click)="redirectToEdit(task.id)">edit</button>
         <button (click)="deletePrompt()">delete</button>
         <span>XP: +{{ task.xp }} </span>
+        <span *ngIf="due">{{ dueSinceStr(task) }}</span>
       </div>
     </div>
   </div>
