--- a/src/app/editor/editor.component.html
+++ b/src/app/editor/editor.component.html
@@ -3,49 +3,63 @@
 <h1 *ngIf="createNew">Create New Task</h1>
 <h1 *ngIf="!createNew">Edit Task</h1>
 
-<h4>Title</h4>
-<input [(ngModel)]="task.title" />
+<div class="editorRow">
+  <div>
+    <h4>Title</h4>
+    <input [(ngModel)]="task.title" />
+  </div>
 
-<h4>Description</h4>
-<textarea [(ngModel)]="task.description" rows="30" cols="120"> </textarea>
+  <div>
+    <h4 *ngIf="createNew">First due date</h4>
+    <h4 *ngIf="!createNew">Next due date</h4>
+    <input type="date" [(ngModel)]="task.nextDueDate" />
+  </div>
 
-<h4 *ngIf="createNew">First due date</h4>
-<h4 *ngIf="!createNew">Next due date</h4>
-<input type="date" [(ngModel)]="task.nextDueDate" />
-
-<h4>Interval (=When to repeat after finishing)</h4>
-<input [(ngModel)]="task.interval.num" type="number" />
-<select
-  [(ngModel)]="task.interval.method"
-  (ngModelChange)="onIntervalMethodChange()"
->
-  <option [value]="intervalMethod.Day">Days</option>
-  <option [value]="intervalMethod.Month">Months</option>
-  <option [value]="intervalMethod.Year">Years</option>
-  <option [value]="intervalMethod.NeverRepeat">
-    Never Repeat (will be deleted after completion)
-  </option>
-</select>
-
-<div>
-  <input
-    [disabled]="task.interval.method == intervalMethod.NeverRepeat"
-    type="checkbox"
-    [(ngModel)]="task.addToLastDueDate"
-  />
-  <label [ariaDisabled]=""
-    >Add interval to Last Due Date (if not, add to Completion Date)</label
-  >
+  <div>
+    <h4>Category</h4>
+    <select [(ngModel)]="task.categoryId">
+      <option *ngFor="let category of categories" [value]="category.id">
+        {{ category.name }}
+      </option>
+    </select>
+  </div>
 </div>
 
-<h4>Category</h4>
-<select [(ngModel)]="task.categoryId">
-  <option *ngFor="let category of categories" [value]="category.id">
-    {{ category.name }}
-  </option>
-</select>
+<div class="editorRow">
+  <div>
+    <h4>Interval</h4>
+    <input [(ngModel)]="task.interval.num" type="number" />
+    <select
+      [(ngModel)]="task.interval.method"
+      (ngModelChange)="onIntervalMethodChange()"
+    >
+      <option [value]="intervalMethod.Day">Days</option>
+      <option [value]="intervalMethod.Month">Months</option>
+      <option [value]="intervalMethod.Year">Years</option>
+      <option [value]="intervalMethod.NeverRepeat">
+        Never Repeat (will be deleted after completion)
+      </option>
+    </select>
+  </div>
+  <div>
+    <h4>Repetition Mode</h4>
+    <input
+      [disabled]="task.interval.method == intervalMethod.NeverRepeat"
+      type="checkbox"
+      [(ngModel)]="task.addToLastDueDate"
+    />
+    <label [ariaDisabled]="">Follow interval strictly (fixed Dates)</label>
+  </div>
+</div>
 
-<h4>XP Reward</h4>
-<input [(ngModel)]="task.xp" type="number" min="0" max="{{ MAX_XP }}" />
+<div class="editorRow">
+  <div>
+    <h4>XP Reward</h4>
+    <input [(ngModel)]="task.xp" type="number" min="0" max="{{ MAX_XP }}" />
+  </div>
+</div>
+
+<h4>Description</h4>
+<textarea [(ngModel)]="task.description" rows="4" cols="80"> </textarea>
 
 <button (click)="onSavePressed()">Save</button>
