--- a/src/app/edit-list/mini-task-list/mini-task-list.component.scss
+++ b/src/app/edit-list/mini-task-list/mini-task-list.component.scss
@@ -64,3 +64,12 @@
 .task-delete-btn:hover {
   background-color: rgb(255, 255, 159);
 }
+.editRow {
+  padding-top: 1em;
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+}
+.addBtnContainer {
+  align-self: flex-end;
+}
