--- a/src/app/edit-list/categories/categories.component.html
+++ b/src/app/edit-list/categories/categories.component.html
@@ -14,7 +14,12 @@
       <div class="task-title-text" [innerHTML]="category.name"></div>
       <div class="task-last-post">Priority: {{ category.priorityPlace }}</div>
     </div>
-    <button class="task-delete-btn" (click)="deleteCategory(category)">
+    <!-- non-user made ids will be under 10 characters, and should not be deleted -->
+    <button
+      *ngIf="category.id.length > 10"
+      class="task-delete-btn"
+      (click)="deleteCategory(category)"
+    >
       Delete
     </button>
     <div>
