--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -21,7 +21,7 @@
   <div *ngIf="!isDue(day.date)" class="notDueYet">
     <h2>
       {{ day.date | date }} ({{ day.date | date : "EE" }}) (in
-      {{ daysTillDueStr(day.date) }})
+      {{ daysTillDueStr(day.date) }}) {{ getMoonIcon(day.date) }}
     </h2>
     <div class="task-container" *ngFor="let task of day.tasks">
       <app-task-panel
