fix: :bug: adjusted multiple things
added skip counter, fixed XP bar placement, fixed black moon not showing

--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -22,6 +22,9 @@
         <button (click)="deletePrompt()">delete</button>
         <span>XP: +{{ task.xp }} </span>
         <span *ngIf="due">{{ dueSinceStr(task) }}</span>
+        <span *ngIf="task.timesSkipped > 0"
+          >Skips: {{ task.timesSkipped }}</span
+        >
       </div>
     </div>
   </div>
