style: :lipstick: add bg, edit task panel

--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -21,9 +21,9 @@
         <button (click)="redirectToEdit(task.id)">edit</button>
         <button (click)="deletePrompt()">delete</button>
         <span>XP: +{{ task.xp }} </span>
-        <span *ngIf="due">{{ dueSinceStr(task) }}</span>
-        <span *ngIf="task.timesSkipped > 0"
-          >Skips: {{ task.timesSkipped }}</span
+        <span *ngIf="due">- {{ dueSinceStr(task) }}</span>
+        <span *ngIf="task.timesSkipped > 0">
+          - Skips: {{ task.timesSkipped }}</span
         >
       </div>
     </div>
