--- a/src/app/components/task-panel/task-panel.component.scss
+++ b/src/app/components/task-panel/task-panel.component.scss
@@ -1,9 +1,9 @@
 .task-panel {
   border-style: solid;
   border-width: 2px;
-  border-color: aqua;
+  border-color: black;
   display: grid;
-  grid-template-columns: 70% 15% 155%;
+  grid-template-columns: 70% 15% 15%;
   grid-template-areas: "task-content task-skip task-complete";
 }
 
@@ -30,11 +30,26 @@
 
 .task-complete {
   grid-area: "task-complete";
-  background-color: green;
+
+  -webkit-transition: background 1s ease-out;
+  -moz-transition: background 1s ease-out;
+  -o-transition: background 1s ease-out;
+  transition: background 1s ease-out;
+  background: linear-gradient(45deg, #00ff0d, rgb(197, 255, 215));
+  -webkit-transition: background 0.1s ease-out;
+  -moz-transition: background 0.1s ease-out;
+  -o-transition: background 0.1s ease-out;
+  transition: background 0.1s ease-out;
+  background-size: 1px 300px;
+
+  border-radius: 0px;
   min-width: 5em;
   border-style: none none none solid;
   border-width: 1px;
   border-color: black;
+}
+.task-complete:hover {
+  background-position: 700px;
 }
 
 .task-description {
