--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,20 +1,20 @@
-<p>home works!</p>
+<div class="bg">
+  <button (click)="redirectToEditor()">Add Task</button>
+  <button (click)="popupMiniTasks()">Add Mini Task</button>
 
-<button (click)="redirectToEditor()">Add Task</button>
-<button (click)="popupMiniTasks()">Add Mini Task</button>
+  <p-dialog
+    header="Add Mini-Task"
+    [(visible)]="showMiniTaskPopup"
+    [style]="{ width: '50vw', height: '300px' }"
+    (onHide)="showMiniTaskPopup = false"
+  >
+    <app-mini-task-selector
+      *ngIf="showMiniTaskPopup"
+      (miniTasksSelected)="onMiniTasksSelected()"
+    ></app-mini-task-selector>
+  </p-dialog>
 
-<p-dialog
-  header="Add Mini-Task"
-  [(visible)]="showMiniTaskPopup"
-  [style]="{ width: '50vw', height: '300px' }"
-  (onHide)="showMiniTaskPopup = false"
->
-  <app-mini-task-selector
-    *ngIf="showMiniTaskPopup"
-    (miniTasksSelected)="onMiniTasksSelected()"
-  ></app-mini-task-selector>
-</p-dialog>
+  <app-timeline></app-timeline>
 
-<app-timeline></app-timeline>
-
-<app-xp-progress-bar></app-xp-progress-bar>
+  <app-xp-progress-bar></app-xp-progress-bar>
+</div>
