--- a/src/app/edit-list/edit-list.component.html
+++ b/src/app/edit-list/edit-list.component.html
@@ -4,7 +4,7 @@
 
 <button (click)="redirect('/categories/')">Edit Categories</button>
 
-<button (click)="redirect('/miniTasks/')">Edit Mini Tasks List</button>
+<button (click)="redirect('/miniTasks/')">Edit unregular Tasks</button>
 
 <div class="tasksArea">
   <div class="task-container" *ngFor="let task of tasks">
