--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,9 @@
 <div class="bg">
   <button (click)="redirectToEditor()">Add Task</button>
-  <button (click)="popupMiniTasks()">Add Mini Task</button>
+  <button (click)="popupMiniTasks()">Add Unregular Tasks</button>
 
   <p-dialog
-    header="Add Mini-Task"
+    header="Select Unregular Tasks"
     [(visible)]="showMiniTaskPopup"
     [style]="{ width: '50vw', height: '300px' }"
     (onHide)="showMiniTaskPopup = false"
