feat: :sparkles: add settings menu

--- a/src/app/level/level.component.html
+++ b/src/app/level/level.component.html
@@ -1,3 +1,7 @@
 <div>
   Level: {{ levelProgress.level }} XP: {{ levelProgress.xp }} / {{ neededXP }}
 </div>
+
+<div>
+  <button>View History</button>
+</div>
