feat: :sparkles: add "show all days" option functionality

--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -39,6 +39,7 @@
         (taskDeleted)="deleteTask(task)"
       ></app-task-panel>
     </div>
+    <span *ngIf="day.tasks.length == 0">No Tasks</span>
   </div>
 </div>
 
