feat: :sparkles: add functionality to create new task on a given day

--- a/src/app/components/timeline/timeline.component.html
+++ b/src/app/components/timeline/timeline.component.html
@@ -39,7 +39,9 @@
         (taskDeleted)="deleteTask(task)"
       ></app-task-panel>
     </div>
-    <span *ngIf="day.tasks.length == 0">No Tasks</span>
+    <span class="addNewTaskOnDay" (click)="redirectToEditor(day.date)"
+      >+ Add Task</span
+    >
   </div>
 </div>
 
