chore: :pencil2: change interface and start migrating ui to primeng

--- a/src/app/components/mini-task-selector/mini-task-selector.component.html
+++ b/src/app/components/mini-task-selector/mini-task-selector.component.html
@@ -16,7 +16,7 @@
       [disabled]="!customMiniTaskChecked"
       [(ngModel)]="customMiniTaskText"
       type="text"
-      placeholder="custom mini task"
+      placeholder="title"
     />
     <input
       [disabled]="!customMiniTaskChecked"
