--- a/src/app/components/task-panel/task-panel.component.html
+++ b/src/app/components/task-panel/task-panel.component.html
@@ -3,7 +3,7 @@
   class="task-panel"
   [ngStyle]="{
     background:
-      '-webkit-linear-gradient(' + getCategoryColor(task) + ', #ffffff)'
+      '-webkit-linear-gradient(' + getCategoryColor(task) + ', #000000)'
   }"
 >
   <div class="task-content">
