--- a/src/app/edit-list/categories/categories.component.html
+++ b/src/app/edit-list/categories/categories.component.html
@@ -5,7 +5,7 @@
 <div class="tasksArea">
   <div
     [ngStyle]="{
-      background: '-webkit-linear-gradient(' + category.color + ', #ffffff)'
+      background: '-webkit-linear-gradient(' + category.color + ', #000000)'
     }"
     class="task-container"
     *ngFor="let category of categories; let i = index"
