--- a/src/app/edit-list/edit-list.component.html
+++ b/src/app/edit-list/edit-list.component.html
@@ -12,7 +12,7 @@
       class="task"
       [ngStyle]="{
         background:
-          '-webkit-linear-gradient(' + getCategoryColor(task) + ', #ffffff)'
+          '-webkit-linear-gradient(' + getCategoryColor(task) + ', #000000)'
       }"
       (click)="redirect('/edit/' + task.id)"
     >
