--- a/src/app/edit-list/mini-task-list/mini-task-list.component.html
+++ b/src/app/edit-list/mini-task-list/mini-task-list.component.html
@@ -6,7 +6,7 @@
     *ngFor="let miniTask of miniTasks"
     [ngStyle]="{
       background:
-        '-webkit-linear-gradient(' + getCategoryColor(miniTask) + ', #ffffff)'
+        '-webkit-linear-gradient(' + getCategoryColor(miniTask) + ', #000000)'
     }"
   >
     <div class="task">
