--- a/src/app/navigation/navigation.component.html
+++ b/src/app/navigation/navigation.component.html
@@ -1,4 +1,6 @@
-<button (click)="redirect('/home')">Home/Main</button>
-<button (click)="redirect('/edit')">Edit Data</button>
-<button (click)="redirect('/level')">Level</button>
-<button (click)="redirect('/settings')">Settings</button>
+<div class="navigator">
+  <button (click)="redirect('/home')">Home/Main</button>
+  <button (click)="redirect('/edit')">Edit Data</button>
+  <button (click)="redirect('/level')">Level</button>
+  <button (click)="redirect('/settings')">Settings</button>
+</div>
