--- a/src/app/components/task-panel/task-panel.component.scss
+++ b/src/app/components/task-panel/task-panel.component.scss
@@ -3,7 +3,7 @@
   border-width: 2px;
   border-color: black;
   display: grid;
-  grid-template-columns: 70% 15% 15%;
+  grid-template-columns: 65% 15% 20%;
   grid-template-areas: "task-content task-skip task-complete";
 }
 
@@ -43,7 +43,7 @@
   background-size: 1px 300px;
 
   border-radius: 0px;
-  min-width: 5em;
+
   border-style: none none none solid;
   border-width: 1px;
   border-color: black;
@@ -65,6 +65,7 @@
 
 .task-title-text {
   font-style: bold;
+  color: #fff;
 }
 
 .task-title-text:hover {
