--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -5,7 +5,7 @@
   <p-dialog
     header="Select Unregular Tasks"
     [(visible)]="showMiniTaskPopup"
-    [style]="{ width: '50vw', height: '300px' }"
+    [style]="{ width: '100vw' }"
     (onHide)="showMiniTaskPopup = false"
   >
     <app-mini-task-selector
