--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -1,5 +1,6 @@
 .bg {
-  background: url(../../assets/lez.png) no-repeat center top;
+  // background: url(../../assets/lez.png) no-repeat center top;
+  background-image: linear-gradient(-170deg, #379299 50%, #063852 110%);
   background-size: cover;
   height: 100vh;
 }
