--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,5 +2,5 @@
   // background: url(../../assets/lez.png) no-repeat center top;
   background-image: linear-gradient(-170deg, #379299 50%, #063852 110%);
   background-size: cover;
-  height: 100vh;
+  height: 100%;
 }
